--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-sudo: true
 language: haskell
 
 git:
@@ -11,7 +10,7 @@ cache:
   - "$HOME/.cabal/store"
   
 
-matrix:
+jobs:
   include:
   - ghc: 8.4.4
   - ghc: 8.6.5
